--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,34 +8,33 @@ env:
   TF_WORKPLACE: "GitHub-Actions"
   TF_CLOUD_ORGANIZATIO: "Tommys-Private-Projects"
 jobs:
-  build:
+  Docker:
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: checkout code
+      - name: checkout code
         uses: actions/checkout@v3
 
-      - 
-        name: Login to Docker Hub
-        uses: actions/docker/login-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
+
+      -name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Build and push
+
+      -name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/microservice:latest
+
   Terraform:
     name: "Terraform"
     needs:
-      build
+      Docker
     runs-on: ubuntu-latest
     steps:
     #we have checkouted the code in the last job
