--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,7 @@ env:
   TF_WORKPLACE: "GitHub-Actions"
   TF_CLOUD_ORGANIZATIO: "Tommys-Private-Projects"
   CONFIG_DIRECTORY: "./"
+  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
 jobs:
   Docker:
     runs-on: ubuntu-latest
