--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ on:
     
 env:
   TF_WORKPLACE: "GitHub-Actions"
-  TF_CLOUD_ORGANIZATIO: "Tommys-Private-Projects"
+  TF_CLOUD_ORGANIZATION: "Tommys-Private-Projects"
   CONFIG_DIRECTORY: "./"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
 jobs:
