--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,7 +44,9 @@ jobs:
       Docker
     runs-on: ubuntu-latest
     steps:
-    #we have checkouted the code in the last job
+      - name: checkout
+        uses: actions/checkout@v3
+        
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
